--- a/Költségvetés_Elemző/Költségvetés_Elemző/Költségvetés_Elemző.csproj
+++ b/Költségvetés_Elemző/Költségvetés_Elemző/Költségvetés_Elemző.csproj
@@ -46,6 +46,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class1.cs" />
+    <Compile Include="Class2.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
