--- a/Költségvetés_Elemző/Költségvetés_Elemző/Költségvetés_Elemző.csproj
+++ b/Költségvetés_Elemző/Költségvetés_Elemző/Költségvetés_Elemző.csproj
@@ -76,6 +76,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="szamlatortenet.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
