--- a/Költségvetés_Elemző/Költségvetés_Elemző/Költségvetés_Elemző.csproj
+++ b/Költségvetés_Elemző/Költségvetés_Elemző/Költségvetés_Elemző.csproj
@@ -72,6 +72,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="Properties\DataSources\Class2.datasource" />
+    <None Include="Properties\DataSources\Form1.datasource" />
+    <None Include="Properties\DataSources\Költségvetés_Elemző.Properties.Resources.datasource" />
+    <None Include="Properties\DataSources\Költségvetés_Elemző.Properties.Settings.datasource" />
+    <None Include="Properties\DataSources\Program.datasource" />
+    <None Include="Properties\DataSources\Szamlamozgas.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
